# CSC145A

./: README.md  objnclass.cpp
3DRPGv1/: outline.txt
3DRPGv1/Engine/src/: Camera.cpp  Camera.h  Main.cpp  Model.cpp  Model.h  Shader.cpp  Texture.cpp  Window.cpp  Window.h
3DRPGv2/: main.cpp
3DRPGv3/: CMakeLists.txt  IMPROVEMENTS.md  SETUP_IMGUI.md  TEXTURE_SETUP.md
3DRPGv3/assets/shaders/: basic.frag  basic.vert
3DRPGv3/libs/glad/include/glad/: glad.h
3DRPGv3/libs/glad/src/: glad.c
3DRPGv3/src/: Game.cpp  Game.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  World.cpp  World.h  main.cpp
random/: TemperatureLog.cpp  TemperatureLog.h  divideandconquer.cpp  main.cpp
